refactor: adjusting some things